--- a/005_LMS_Exploration_SO3/2.14. summit the project_final.ipynb
+++ b/005_LMS_Exploration_SO3/2.14. summit the project_final.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "387d0bb7",
+   "id": "b7b28cea",
    "metadata": {},
    "source": [
     "# 요약 : "
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a22bd0f",
+   "id": "bb16dd8c",
    "metadata": {},
    "source": [
     " - **2.12. 프로젝트 1 : 당뇨병 수치 맞추기**\n",
@@ -33,6 +33,7 @@
     "      - `'s5'`\n",
     "      - `'s6'`\n",
     "   - label로서는 당뇨병의 진행정도를 수치로 나타낸 값을 부여했습니다. ([출처](https://www.kaggle.com/datasets/mathchi/diabetes-data-set))\n",
+    "   이것에 대해 따로 이름은 붙여져 있지 않은 걸로 보였고, 임의로 `disease progress`라는 이름을 붙였습니다.\n",
     "   - 모델로서 affine function $y=Wx+b$을 설정했습니다.\n",
     "   즉, 다변수 선형회귀 모델이고, $x$는 89차원의 벡터(열벡터), $W$는 353x89의 행렬, $y$와 $b$는 실수값이라고 생각할 수 있습니다.\n",
     "   하지만 코드 상으로는 `y=XW+b`의 형태로 구현되는데 이것은 똑같은 작용입니다.\n",
@@ -47,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9f756ed",
+   "id": "9ed55d7f",
    "metadata": {},
    "source": [
     " - **2.13. 프로젝트 2 : 자전거 수요 맞추기**\n",
@@ -67,7 +68,8 @@
     "      - `'humidity'`\n",
     "      - '`windspeed'`\n",
     "   \n",
-    "   한편, label에 해당하는 값은 해당 시간구간 동안 \n",
+    "   한편, label에 해당하는 값은 해당 시간구간 동안 얼마나 많은 자전거를 빌려갔느냐를 센 값입니다.\n",
+    "   이것을 `count`라고도 불렀습니다.\n",
     "   - 전처리 과정의 결과로 네 개의 데이터 객체를 만들었습니다.\n",
     "   |데이터   |설명                     |shape     |dtype|\n",
     "   |:-:      |:-:                      |:-:       |:-:|\n",
@@ -86,7 +88,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "479a823f",
+   "id": "e9cede49",
    "metadata": {},
    "source": [
     "## 2.12. 프로젝트 1 : 손수 설계하는 선형회귀, 당뇨병 수치를 맞춰보자!"
@@ -94,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ce611b1",
+   "id": "fc233bab",
    "metadata": {},
    "source": [
     "### (1) 데이터 가져오기"
@@ -103,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7ff91984",
+   "id": "3f4df55b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "50755710",
+   "id": "85f64d48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3118bbb2",
+   "id": "0b5b0619",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "124c323c",
+   "id": "590c0747",
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d13acf50",
+   "id": "08ba807a",
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "538f041e",
+   "id": "c5f6799f",
    "metadata": {},
    "source": [
     "### (2) 모델에 입력할 데이터 X 준비하기"
@@ -192,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8b57ae7b",
+   "id": "ec22a4b2",
    "metadata": {
     "scrolled": true
    },
@@ -422,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ca8a35b2",
+   "id": "9a9eb1f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +433,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11c80461",
+   "id": "7e0adc72",
    "metadata": {},
    "source": [
     "### (3) 모델에 입력할 데이터 y 준비하기"
@@ -440,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "29bc1647",
+   "id": "ca995212",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "abbd76e5",
+   "id": "fa128c4d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "1dad315d",
+   "id": "3404d56d",
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +481,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "656232ee",
+   "id": "dce24797",
    "metadata": {},
    "source": [
     "### (4) train 데이터와 test 데이터로 분리하기"
@@ -488,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "2f321bbb",
+   "id": "b2712904",
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "e66ab568",
+   "id": "94bcdf0a",
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +535,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4411aa35",
+   "id": "7af3a2e5",
    "metadata": {},
    "source": [
     "### (5) 모델 준비하기"
@@ -542,7 +544,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "96847055",
+   "id": "533a7fe6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "d1696c7c",
+   "id": "300d9a53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24058435",
+   "id": "5d62a633",
    "metadata": {},
    "source": [
     "### (6) 손실함수 loss 정의하기"
@@ -576,7 +578,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "1bae84fc",
+   "id": "c7dd5c77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "e9dfcf38",
+   "id": "6f88fc8f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,7 +602,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9f1f4d6",
+   "id": "8e0d8aee",
    "metadata": {},
    "source": [
     "### (7) 기울기를 구하는 gradient 함수 구현하기"
@@ -609,7 +611,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "e1e0b488",
+   "id": "39a42ccd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,7 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "58ca04d7",
+   "id": "61df45e2",
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc95ad9b",
+   "id": "82803545",
    "metadata": {},
    "source": [
     "### (8) 하이퍼 파라미터인 학습률 설정하기"
@@ -654,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "4d5dca6b",
+   "id": "5355dfcd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,7 +665,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b48110aa",
+   "id": "9055e84e",
    "metadata": {},
    "source": [
     "### (9) 모델 학습하기"
@@ -672,7 +674,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "b800b85d",
+   "id": "db704471",
    "metadata": {},
    "outputs": [
     {
@@ -718,7 +720,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "47dbeaff",
+   "id": "e032bb1c",
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +738,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "52efb265",
+   "id": "d177cf1f",
    "metadata": {
     "scrolled": true
    },
@@ -763,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "dd72e75d",
+   "id": "5078cbd4",
    "metadata": {
     "scrolled": true
    },
@@ -788,7 +790,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa0aeb60",
+   "id": "a7d6a86b",
    "metadata": {},
    "source": [
     "### (10) test 데이터에 대한 성능 확인하기"
@@ -797,7 +799,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "960e4db6",
+   "id": "170742e3",
    "metadata": {},
    "outputs": [
     {
@@ -819,7 +821,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43f92059",
+   "id": "92df3794",
    "metadata": {},
    "source": [
     "### (11) 정답 데이터와 예측한 데이터 시각화하기"
@@ -828,7 +830,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "13216f54",
+   "id": "c7d37ed9",
    "metadata": {
     "scrolled": true
    },
@@ -854,7 +856,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a8e30c3",
+   "id": "d0ecb09e",
    "metadata": {},
    "source": [
     "## 2.13. 프로젝트 2 : 날씨 좋은 월요일 오후 세 시, 자전거 타는 사람은 몇 명?"
@@ -863,7 +865,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "917628f5",
+   "id": "b7dc6db1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -878,7 +880,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87833515",
+   "id": "a87b847d",
    "metadata": {},
    "source": [
     "### (1) 데이터 가져오기"
@@ -887,7 +889,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "f8ddf3ab",
+   "id": "e08a5228",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -898,7 +900,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "199c6111",
+   "id": "b52dce7b",
    "metadata": {},
    "outputs": [
     {
@@ -918,7 +920,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "a256960a",
+   "id": "1ca2c455",
    "metadata": {
     "scrolled": true
    },
@@ -955,7 +957,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c815fc9e",
+   "id": "28e2e725",
    "metadata": {},
    "source": [
     "### (2) `datetime` 컬럼을 `datetime` 자료형으로 변환하고 연, 월, 일, 시, 분, 초까지 6가지 컬럼 생성하기"
@@ -964,7 +966,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "bf5f2c84",
+   "id": "c04216cc",
    "metadata": {
     "scrolled": true
    },
@@ -1139,7 +1141,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "eea8a4a6",
+   "id": "40716a1c",
    "metadata": {},
    "outputs": [
     {
@@ -1159,7 +1161,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01a44619",
+   "id": "08894559",
    "metadata": {},
    "source": [
     "### (3) year, month, day, hour, minute, second 데이터 개수 시각화하기"
@@ -1168,7 +1170,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "9ec11fd5",
+   "id": "25441716",
    "metadata": {},
    "outputs": [
     {
@@ -1215,7 +1217,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70b3153c",
+   "id": "a80c04e2",
    "metadata": {},
    "source": [
     "### (4) X, y 컬럼 선택 및 train/test 데이터 분리"
@@ -1224,7 +1226,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "f85f07f7",
+   "id": "061fe539",
    "metadata": {},
    "outputs": [
     {
@@ -1248,7 +1250,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "3da110db",
+   "id": "d80952f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1260,7 +1262,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "58e146b0",
+   "id": "50fb0c22",
    "metadata": {},
    "outputs": [
     {
@@ -1284,7 +1286,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "e0b2b9da",
+   "id": "5fc6449a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1294,7 +1296,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "ca84d1a2",
+   "id": "b7cbce53",
    "metadata": {},
    "outputs": [
     {
@@ -1325,7 +1327,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9435237d",
+   "id": "afc8d273",
    "metadata": {},
    "source": [
     "### (5) LinearRegression 모델 학습"
@@ -1334,7 +1336,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "052793f2",
+   "id": "89b399bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1343,7 +1345,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "334bfce3",
+   "id": "ad574b54",
    "metadata": {},
    "source": [
     "### (6) 학습된 모델로 X_test에 대한 예측값 출력 및 손실함수값 계산"
@@ -1352,7 +1354,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "0359dc4c",
+   "id": "75c7c9d5",
    "metadata": {
     "scrolled": true
    },
@@ -1375,7 +1377,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "e492cf6c",
+   "id": "f375d3b2",
    "metadata": {},
    "outputs": [
     {
@@ -1397,7 +1399,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "daf09568",
+   "id": "24253784",
    "metadata": {
     "scrolled": true
    },
@@ -1518,7 +1520,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "d0cc593e",
+   "id": "c96d8be5",
    "metadata": {},
    "outputs": [
     {
@@ -1539,7 +1541,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69c80a6a",
+   "id": "ac20ed71",
    "metadata": {},
    "source": [
     "### (7) x축은 temp 또는 humidity로, y축은 count로 예측 결과 시각화하기"
@@ -1548,7 +1550,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "a7fae914",
+   "id": "97d10b70",
    "metadata": {
     "scrolled": true
    },
@@ -1572,7 +1574,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "523d4131",
+   "id": "7cb8da48",
    "metadata": {},
    "outputs": [
     {
@@ -1594,7 +1596,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "07147538",
+   "id": "ce8bf2c7",
    "metadata": {},
    "outputs": [
     {
@@ -1615,7 +1617,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "c4bf9f5f",
+   "id": "eb5ec813",
    "metadata": {},
    "outputs": [
     {
@@ -1636,7 +1638,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "7d159d17",
+   "id": "cdb9da38",
    "metadata": {},
    "outputs": [
     {
@@ -1766,7 +1768,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "16ca7aa5",
+   "id": "7ad3d655",
    "metadata": {},
    "outputs": [
     {
@@ -1792,7 +1794,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "129ba869",
+   "id": "040a5536",
    "metadata": {},
    "outputs": [
     {
