--- a/005_LMS_Exploration_SO3/2.14. summit the project_final.ipynb
+++ b/005_LMS_Exploration_SO3/2.14. summit the project_final.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f07e3039",
+   "id": "eabef578",
    "metadata": {},
    "source": [
     "# 요약 : "
@@ -10,20 +10,32 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b4e182a",
+   "id": "3254493c",
    "metadata": {},
    "source": [
     " - **2.12. 프로젝트 1 : 당뇨병 수치 맞추기**\n",
     "   - `load_diabetes()`로 데이터를 불러왔습니다.\n",
-    "   - 따로 전처리는 하지 않고, 각각의 sample들을 적당히 나누는 작업만을 시행하였고, 다음과 같은 네 개의 데이터 객체를 만들었습니다.\n",
-    "   \n",
-    "   |데이터   |설명                     |shape    |dtype|\n",
-    "   |:-:      |:-:                      |:-:      |:-:|\n",
-    "   |`X_train`|training dataset, feature|(353, 10)|`np.array`|\n",
-    "   |`X_test` |test dataset, feature    |(89, 10) |`np.array`|\n",
-    "   |`y_train`|training dataset, label  |(353, )  |`np.array`|\n",
-    "   |`y_test` |test dataset, label      |(89, )   |`np.array`|\n",
-    "   \n",
+    "   - 따로 전처리는 하지 않고, 각각의 sample들을 적당히 나누는 작업만을 시행하였고, 다음과 같은 네 개의 데이터 객체를 만들었습니다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6715688c",
+   "metadata": {},
+   "source": [
+    "|데이터   |설명                     |shape    |dtype|\n",
+    "|:-:      |:-:                      |:-:      |:-:|\n",
+    "|`X_train`|training dataset, feature|(353, 10)|`np.array`|\n",
+    "|`X_test` |test dataset, feature    |(89, 10) |`np.array`|\n",
+    "|`y_train`|training dataset, label  |(353, )  |`np.array`|\n",
+    "|`y_test` |test dataset, label      |(89, )   |`np.array`|"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "92822852",
+   "metadata": {},
+   "source": [
     "   - feature들은 모두 10개로, 다음과 같습니다.\n",
     "      - `'age'`\n",
     "      - `'sex'`\n",
@@ -50,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5893d5a",
+   "id": "fa974ad6",
    "metadata": {},
    "source": [
     " - **2.13. 프로젝트 2 : 자전거 수요 맞추기**\n",
@@ -73,15 +85,27 @@
     "   \n",
     "   한편, label에 해당하는 값은 해당 시간구간 동안 얼마나 많은 자전거를 빌려갔느냐를 센 값입니다.\n",
     "   이것을 `count`라고도 불렀습니다.\n",
-    "   - 전처리 과정의 결과로 네 개의 데이터 객체를 만들었습니다.\n",
-    "   \n",
+    "   - 전처리 과정의 결과로 네 개의 데이터 객체를 만들었습니다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e454c83",
+   "metadata": {},
+   "source": [
     "   |데이터   |설명                     |shape     |dtype|\n",
     "   |:-:      |:-:                      |:-:       |:-:|\n",
     "   |`X_train`|training dataset, feature|(8708, 12)|`np.array`|\n",
     "   |`X_test` |test dataset, feature    |(2178, 12)|`np.array`|\n",
     "   |`y_train`|training dataset, label  |(8708, )  |`np.array`|\n",
-    "   |`y_test` |test dataset, label      |(2178, )  |`np.array`|\n",
-    "   \n",
+    "   |`y_test` |test dataset, label      |(2178, )  |`np.array`|"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4fdd827",
+   "metadata": {},
+   "source": [
     "   - `sklearn`의 모듈 `sklearn.linear_model.LinearRegression`을 사용합니다.\n",
     "   즉, affine function $y=Wx+b$라는 모델을 고려하되, testset에 가장 잘 맞는 `W`와 `b`를 계산합니다.\n",
     "   그러니까 이 때에 학습을 진행하는 것은 아닙니다.\n",
@@ -93,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "045ddea2",
+   "id": "d58e9d9f",
    "metadata": {},
    "source": [
     "## 2.12. 프로젝트 1 : 손수 설계하는 선형회귀, 당뇨병 수치를 맞춰보자!"
@@ -101,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "164ffed7",
+   "id": "25679e31",
    "metadata": {},
    "source": [
     "### (1) 데이터 가져오기"
@@ -110,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8f5f0d53",
+   "id": "e3e30fa8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ad5df44a",
+   "id": "04a286f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "52c677ae",
+   "id": "59117189",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "65ed6740",
+   "id": "4ed2ac4a",
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6c70f416",
+   "id": "a1cf2268",
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "588f18b8",
+   "id": "aeca2b4a",
    "metadata": {},
    "source": [
     "### (2) 모델에 입력할 데이터 X 준비하기"
@@ -199,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f01b167c",
+   "id": "cd4dffd5",
    "metadata": {
     "scrolled": true
    },
@@ -429,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "94a0241b",
+   "id": "593b8bb4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,7 +462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6231f4d",
+   "id": "8907ddc2",
    "metadata": {},
    "source": [
     "### (3) 모델에 입력할 데이터 y 준비하기"
@@ -447,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "bb029a55",
+   "id": "083af557",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e1707c68",
+   "id": "3e290ff5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "7b9b0f69",
+   "id": "581e7f1e",
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +510,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ee077f9",
+   "id": "cbdf237e",
    "metadata": {},
    "source": [
     "### (4) train 데이터와 test 데이터로 분리하기"
@@ -495,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e2615e9d",
+   "id": "24a65e68",
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "18b0caba",
+   "id": "40090ad5",
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +564,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d13d62b",
+   "id": "e2e6bee6",
    "metadata": {},
    "source": [
     "### (5) 모델 준비하기"
@@ -549,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "ab7beddf",
+   "id": "5d88b905",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +584,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "166ee4b1",
+   "id": "4ecacbf6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,7 +598,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "867746cb",
+   "id": "90e7a671",
    "metadata": {},
    "source": [
     "### (6) 손실함수 loss 정의하기"
@@ -583,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "88bcc760",
+   "id": "0239ef18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,7 +619,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "b5cb5922",
+   "id": "26761a4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,7 +631,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee3d6ce2",
+   "id": "7b5f785f",
    "metadata": {},
    "source": [
     "### (7) 기울기를 구하는 gradient 함수 구현하기"
@@ -616,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "a76cab46",
+   "id": "b93472d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +655,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "0e9e2138",
+   "id": "4fd5c7ac",
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +676,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e176c4f1",
+   "id": "eef50d9d",
    "metadata": {},
    "source": [
     "### (8) 하이퍼 파라미터인 학습률 설정하기"
@@ -661,7 +685,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "d538c44c",
+   "id": "8eb201f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,7 +694,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2526370",
+   "id": "6412bf1d",
    "metadata": {},
    "source": [
     "### (9) 모델 학습하기"
@@ -679,7 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "9619e7e7",
+   "id": "df4c319b",
    "metadata": {},
    "outputs": [
     {
@@ -725,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "6b6ecdee",
+   "id": "7d38cd3e",
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +767,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "02713cc6",
+   "id": "480a8588",
    "metadata": {
     "scrolled": true
    },
@@ -770,7 +794,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "b49ac69c",
+   "id": "30d78578",
    "metadata": {
     "scrolled": true
    },
@@ -795,7 +819,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d12e9e2",
+   "id": "3615de05",
    "metadata": {},
    "source": [
     "### (10) test 데이터에 대한 성능 확인하기"
@@ -804,7 +828,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "baabcdd6",
+   "id": "d689db20",
    "metadata": {},
    "outputs": [
     {
@@ -826,7 +850,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd413805",
+   "id": "1ed3935e",
    "metadata": {},
    "source": [
     "### (11) 정답 데이터와 예측한 데이터 시각화하기"
@@ -835,7 +859,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "41bcde4e",
+   "id": "8eb26aa7",
    "metadata": {
     "scrolled": true
    },
@@ -861,7 +885,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de7c978f",
+   "id": "0b8b5c1b",
    "metadata": {},
    "source": [
     "## 2.13. 프로젝트 2 : 날씨 좋은 월요일 오후 세 시, 자전거 타는 사람은 몇 명?"
@@ -870,7 +894,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "e038283c",
+   "id": "fa57abce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,7 +909,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95a4f906",
+   "id": "0b4f3287",
    "metadata": {},
    "source": [
     "### (1) 데이터 가져오기"
@@ -894,7 +918,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "4d531a51",
+   "id": "5bf60473",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -905,7 +929,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "0778bf76",
+   "id": "a67415c1",
    "metadata": {},
    "outputs": [
     {
@@ -925,7 +949,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "164d99a9",
+   "id": "9eb1fc69",
    "metadata": {
     "scrolled": true
    },
@@ -962,7 +986,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b904ae3",
+   "id": "69f9ecf9",
    "metadata": {},
    "source": [
     "### (2) `datetime` 컬럼을 `datetime` 자료형으로 변환하고 연, 월, 일, 시, 분, 초까지 6가지 컬럼 생성하기"
@@ -971,7 +995,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "20339cd5",
+   "id": "54e01d3f",
    "metadata": {
     "scrolled": true
    },
@@ -1146,7 +1170,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "02b83e8a",
+   "id": "cee4f44d",
    "metadata": {},
    "outputs": [
     {
@@ -1166,7 +1190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a00c6ed2",
+   "id": "ded17d90",
    "metadata": {},
    "source": [
     "### (3) year, month, day, hour, minute, second 데이터 개수 시각화하기"
@@ -1175,7 +1199,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "cd045263",
+   "id": "68959a63",
    "metadata": {},
    "outputs": [
     {
@@ -1222,7 +1246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8a07bc9",
+   "id": "70561a97",
    "metadata": {},
    "source": [
     "### (4) X, y 컬럼 선택 및 train/test 데이터 분리"
@@ -1231,7 +1255,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "be0e96a7",
+   "id": "8b7e2634",
    "metadata": {},
    "outputs": [
     {
@@ -1255,7 +1279,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "251046b2",
+   "id": "d69b5e57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1267,7 +1291,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "f0392d0e",
+   "id": "85fdea8c",
    "metadata": {},
    "outputs": [
     {
@@ -1291,7 +1315,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "91973881",
+   "id": "86d62721",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1301,7 +1325,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "065b3487",
+   "id": "2ca25292",
    "metadata": {},
    "outputs": [
     {
@@ -1332,7 +1356,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e516fd5a",
+   "id": "227bc6f3",
    "metadata": {},
    "source": [
     "### (5) LinearRegression 모델 학습"
@@ -1341,7 +1365,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "2b7d8375",
+   "id": "81eca7eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1350,7 +1374,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bac31a33",
+   "id": "b9ecda6e",
    "metadata": {},
    "source": [
     "### (6) 학습된 모델로 X_test에 대한 예측값 출력 및 손실함수값 계산"
@@ -1359,7 +1383,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "7d745e36",
+   "id": "225cba76",
    "metadata": {
     "scrolled": true
    },
@@ -1382,7 +1406,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "d96868e7",
+   "id": "a93f1458",
    "metadata": {},
    "outputs": [
     {
@@ -1404,7 +1428,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "56b9cfaa",
+   "id": "3c8d3d52",
    "metadata": {
     "scrolled": true
    },
@@ -1525,7 +1549,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "a8ad03a4",
+   "id": "9dd576cd",
    "metadata": {},
    "outputs": [
     {
@@ -1546,7 +1570,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0419cbed",
+   "id": "cd5143fb",
    "metadata": {},
    "source": [
     "### (7) x축은 temp 또는 humidity로, y축은 count로 예측 결과 시각화하기"
@@ -1555,7 +1579,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "85192935",
+   "id": "8154ca1f",
    "metadata": {
     "scrolled": true
    },
@@ -1579,7 +1603,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "6779c165",
+   "id": "e818680e",
    "metadata": {},
    "outputs": [
     {
@@ -1601,7 +1625,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "23e834d7",
+   "id": "1e410dd1",
    "metadata": {},
    "outputs": [
     {
@@ -1622,7 +1646,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "a74d1d97",
+   "id": "ded337cf",
    "metadata": {},
    "outputs": [
     {
@@ -1643,7 +1667,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "2dee8cd2",
+   "id": "ce4779a2",
    "metadata": {},
    "outputs": [
     {
@@ -1773,7 +1797,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "4899c709",
+   "id": "ac180d99",
    "metadata": {},
    "outputs": [
     {
@@ -1799,7 +1823,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "9e82cd82",
+   "id": "1ede4047",
    "metadata": {},
    "outputs": [
     {
