--- a/005_LMS_Exploration_SO3/02.14. summit the project_final.ipynb
+++ b/005_LMS_Exploration_SO3/02.14. summit the project_final.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4c9c69dc",
+   "id": "651d5b79",
    "metadata": {},
    "source": [
     "# 요약 : "
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21e6d108",
+   "id": "29c0bd9c",
    "metadata": {},
    "source": [
     " - **2.12. 프로젝트 1 : 당뇨병 수치 맞추기**\n",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2350ee24",
+   "id": "c44811e8",
    "metadata": {},
    "source": [
     "|데이터   |설명                     |shape    |dtype|\n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23bde1b9",
+   "id": "4d6bc88e",
    "metadata": {},
    "source": [
     "   - feature들은 모두 10개로, 다음과 같습니다.\n",
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17b8bf9f",
+   "id": "8c71d5fe",
    "metadata": {},
    "source": [
     " - **2.13. 프로젝트 2 : 자전거 수요 맞추기**\n",
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f87561e5",
+   "id": "8f961684",
    "metadata": {},
    "source": [
     "|데이터   |설명                     |shape     |dtype|\n",
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84dbb1e5",
+   "id": "7998a4ed",
    "metadata": {},
    "source": [
     "   - `sklearn`의 모듈 `sklearn.linear_model.LinearRegression`을 사용합니다.\n",
@@ -125,7 +125,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10ee729c",
+   "id": "f2b9cd76",
+   "metadata": {},
+   "source": [
+    "두 subproject 모두에서, markdown으로 설명을 적는 것은 최대한 피하였고, EDA 과정이나 테스트 과정에서 생긴 불필요한 셀들 또한 보이지 않게 했습니다.\n",
+    "시간적 여유가 없기도 했거니와, 이것들을 표시하는 것이 결과적으로 전체 문서의 모습을 혼란스럽게 보이게 했기 때문입니다.\n",
+    "그래서 요점이 되는 코드들만 적었습니다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "679c1521",
    "metadata": {},
    "source": [
     "## 2.12. 프로젝트 1 : 손수 설계하는 선형회귀, 당뇨병 수치를 맞춰보자!"
@@ -133,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c46cd5a",
+   "id": "0222c17b",
    "metadata": {},
    "source": [
     "### (1) 데이터 가져오기"
@@ -142,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2aef9bd5",
+   "id": "511bc981",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9192d384",
+   "id": "5d1680e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ea6394e5",
+   "id": "d2d2c405",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "23cb50c1",
+   "id": "3eb7a3cf",
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "afd2b794",
+   "id": "09ee63be",
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b93e04c",
+   "id": "0d29714d",
    "metadata": {},
    "source": [
     "### (2) 모델에 입력할 데이터 X 준비하기"
@@ -231,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2bcf2a52",
+   "id": "0dfc2191",
    "metadata": {
     "scrolled": true
    },
@@ -461,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f441d921",
+   "id": "9f228467",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "992ca8c5",
+   "id": "1f564d8d",
    "metadata": {},
    "source": [
     "### (3) 모델에 입력할 데이터 y 준비하기"
@@ -479,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c961b144",
+   "id": "9a31e00c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "bb64b054",
+   "id": "e31e1579",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "df2c0f47",
+   "id": "645744b6",
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "82032740",
+   "id": "0e33db4f",
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +572,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f76e4f0",
+   "id": "c91b7a99",
    "metadata": {},
    "source": [
     "### (4) train 데이터와 test 데이터로 분리하기"
@@ -571,7 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "d3b16f53",
+   "id": "efef8b91",
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +603,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "31d03ac9",
+   "id": "e99abedf",
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +626,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b966c697",
+   "id": "3874543b",
    "metadata": {},
    "source": [
     "### (5) 모델 준비하기"
@@ -625,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "80cac810",
+   "id": "de1c13ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -636,7 +646,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "c7ebd224",
+   "id": "5534ec3b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -650,7 +660,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "228fbcaa",
+   "id": "1848ce34",
    "metadata": {},
    "source": [
     "### (6) 손실함수 loss 정의하기"
@@ -659,7 +669,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "8452673f",
+   "id": "befd6295",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "3f2f5165",
+   "id": "b50a8fc8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -683,7 +693,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "194cbfe6",
+   "id": "11b9c82f",
    "metadata": {},
    "source": [
     "### (7) 기울기를 구하는 gradient 함수 구현하기"
@@ -692,7 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "a4619ef1",
+   "id": "dae6b63e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -707,7 +717,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "d32a7ed0",
+   "id": "76f03ea9",
    "metadata": {},
    "outputs": [
     {
@@ -728,7 +738,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3541de2a",
+   "id": "fa23152f",
    "metadata": {},
    "source": [
     "### (8) 하이퍼 파라미터인 학습률 설정하기"
@@ -737,7 +747,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "23ea06c5",
+   "id": "43b17746",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -746,7 +756,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41d6019c",
+   "id": "491eab50",
    "metadata": {},
    "source": [
     "### (9) 모델 학습하기"
@@ -755,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "67445b4b",
+   "id": "d2a26bc2",
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +811,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "8d83bd60",
+   "id": "a57f227d",
    "metadata": {},
    "outputs": [
     {
@@ -819,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "6130d943",
+   "id": "f310217a",
    "metadata": {
     "scrolled": true
    },
@@ -846,7 +856,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "df2a199d",
+   "id": "baa564cc",
    "metadata": {
     "scrolled": true
    },
@@ -871,7 +881,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb864c54",
+   "id": "48fd1316",
    "metadata": {},
    "source": [
     "### (10) test 데이터에 대한 성능 확인하기"
@@ -880,7 +890,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "b3731fbb",
+   "id": "49c6268f",
    "metadata": {},
    "outputs": [
     {
@@ -902,7 +912,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88a3eeb2",
+   "id": "7fa9d6a7",
    "metadata": {},
    "source": [
     "### (11) 정답 데이터와 예측한 데이터 시각화하기"
@@ -911,7 +921,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "9be00d6a",
+   "id": "45cf7410",
    "metadata": {
     "scrolled": true
    },
@@ -937,7 +947,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0f84e08",
+   "id": "6ece8b82",
    "metadata": {},
    "source": [
     "## 2.13. 프로젝트 2 : 날씨 좋은 월요일 오후 세 시, 자전거 타는 사람은 몇 명?"
@@ -946,7 +956,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "6cbedd59",
+   "id": "db166b27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -961,7 +971,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75ce1785",
+   "id": "e6b907b0",
    "metadata": {},
    "source": [
     "### (1) 데이터 가져오기"
@@ -970,7 +980,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "b191c87f",
+   "id": "177d6430",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -981,7 +991,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "bdd18fa3",
+   "id": "e807e8ac",
    "metadata": {},
    "outputs": [
     {
@@ -1001,7 +1011,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "f02b4c14",
+   "id": "8a8a330b",
    "metadata": {
     "scrolled": true
    },
@@ -1038,7 +1048,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b7a81e7",
+   "id": "7c7b2644",
    "metadata": {},
    "source": [
     "### (2) `datetime` 컬럼을 `datetime` 자료형으로 변환하고 연, 월, 일, 시, 분, 초까지 6가지 컬럼 생성하기"
@@ -1047,7 +1057,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "0f41a33c",
+   "id": "afd8fcb6",
    "metadata": {
     "scrolled": true
    },
@@ -1222,7 +1232,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "c5030ceb",
+   "id": "19c43672",
    "metadata": {},
    "outputs": [
     {
@@ -1242,7 +1252,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d548a6eb",
+   "id": "c4fbaa27",
    "metadata": {},
    "source": [
     "### (3) year, month, day, hour, minute, second 데이터 개수 시각화하기"
@@ -1251,7 +1261,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "a3527086",
+   "id": "50e25854",
    "metadata": {},
    "outputs": [
     {
@@ -1298,7 +1308,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd83f4f2",
+   "id": "b4719acd",
    "metadata": {},
    "source": [
     "### (4) X, y 컬럼 선택 및 train/test 데이터 분리"
@@ -1307,7 +1317,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "418b166a",
+   "id": "6c99aa3c",
    "metadata": {},
    "outputs": [
     {
@@ -1331,7 +1341,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "198c7ea4",
+   "id": "180c15f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1343,7 +1353,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "e0fc948a",
+   "id": "70a9646d",
    "metadata": {},
    "outputs": [
     {
@@ -1367,7 +1377,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "cec93db7",
+   "id": "11c0d7a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1377,7 +1387,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "8a100e65",
+   "id": "70864cd2",
    "metadata": {},
    "outputs": [
     {
@@ -1408,7 +1418,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe704b0e",
+   "id": "fd878ae5",
    "metadata": {},
    "source": [
     "### (5) LinearRegression 모델 학습"
@@ -1417,7 +1427,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "639ee075",
+   "id": "af3897d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1426,7 +1436,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3483e629",
+   "id": "ad4616d1",
    "metadata": {},
    "source": [
     "### (6) 학습된 모델로 X_test에 대한 예측값 출력 및 손실함수값 계산"
@@ -1435,7 +1445,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "7bf892f4",
+   "id": "3eeac827",
    "metadata": {
     "scrolled": true
    },
@@ -1458,7 +1468,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "0a8ee754",
+   "id": "f7188425",
    "metadata": {},
    "outputs": [
     {
@@ -1480,7 +1490,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "d97e0b46",
+   "id": "48bb7164",
    "metadata": {
     "scrolled": true
    },
@@ -1601,7 +1611,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "8a81728a",
+   "id": "bae3e3a8",
    "metadata": {},
    "outputs": [
     {
@@ -1622,7 +1632,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8a41c56",
+   "id": "89a9e7b0",
    "metadata": {},
    "source": [
     "### (7) x축은 temp 또는 humidity로, y축은 count로 예측 결과 시각화하기"
@@ -1631,7 +1641,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "4150bdad",
+   "id": "d45e3b6d",
    "metadata": {
     "scrolled": true
    },
@@ -1655,7 +1665,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "15c6df68",
+   "id": "2dda596f",
    "metadata": {},
    "outputs": [
     {
@@ -1677,7 +1687,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "da9ef818",
+   "id": "164dc12c",
    "metadata": {},
    "outputs": [
     {
@@ -1698,7 +1708,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "53303c81",
+   "id": "f9d6767e",
    "metadata": {},
    "outputs": [
     {
@@ -1719,7 +1729,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "e16b977b",
+   "id": "c8194b08",
    "metadata": {},
    "outputs": [
     {
@@ -1849,7 +1859,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "607c057f",
+   "id": "f6e0dda2",
    "metadata": {},
    "outputs": [
     {
@@ -1875,7 +1885,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "e36c4a86",
+   "id": "c9068e14",
    "metadata": {
     "scrolled": true
    },
@@ -1903,7 +1913,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "550c8cfd",
+   "id": "6d5e9858",
    "metadata": {},
    "outputs": [],
    "source": []
